--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     environment:
       - API_PASSWORD=admin
       - API_USERNAME=admin
+      - FAV_ICO=
     ports:
       - 5000:5000
     volumes:
